tests/fail/return_at_end.has
function foo():int{
    var a = 1
    // should show error
}

function main():int{
    
}